[gd_scene load_steps=29 format=3 uid="uid://ckxlp8rdfeeaf"]

[ext_resource type="SpriteFrames" uid="uid://ctr1m864nio17" path="res://scenes/players/Player-2-Sprite-Frames.tres" id="1_kiej1"]
[ext_resource type="Script" uid="uid://cw06trdvijq7y" path="res://scripts/MovementPlayer.gd" id="1_lr4pb"]
[ext_resource type="PackedScene" uid="uid://bk1l3kpxw5qm7" path="res://scenes/input_sync.tscn" id="3_70nme"]
[ext_resource type="Script" uid="uid://bk7em88k3untq" path="res://scripts/hitplayer.gd" id="4_gwvwa"]
[ext_resource type="AudioStream" uid="uid://yuncq2vjy3ns" path="res://assets/sounds/Laser Weapons - Free Library/heavy_blast_012.wav" id="5_i2e6a"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kiej1"]
radius = 0.885714
height = 3.54286

[sub_resource type="Animation" id="Animation_kiej1"]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_lr4pb"]
resource_name = "Hit"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Hit"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_1qwqt"]
resource_name = "Idle_2"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.0333333, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 0, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_psrb0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle_2"]
}

[sub_resource type="Animation" id="Animation_agx6a"]
resource_name = "Roll_2"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Roll"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_1oi14"]
resource_name = "Walk_2"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.0666667, 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_isrkm"]
_data = {
&"Death": SubResource("Animation_kiej1"),
&"Hit": SubResource("Animation_lr4pb"),
&"Idle": SubResource("Animation_1qwqt"),
&"RESET": SubResource("Animation_psrb0"),
&"Roll": SubResource("Animation_agx6a"),
&"Walk": SubResource("Animation_1oi14")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dylxg"]
animation = &"Death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ir27h"]
animation = &"Hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_56s5d"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rkt3e"]
animation = &"Roll"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sviv5"]
animation = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_delv0"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8tlq2"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qqfcm"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vnxbj"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_amv45"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cpmc8"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gchrc"]
break_loop_at_end = true
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_70nme"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_wg8bi"]
states/Death/node = SubResource("AnimationNodeAnimation_dylxg")
states/Death/position = Vector2(408, 292)
states/End/position = Vector2(1048, 100)
states/Hit/node = SubResource("AnimationNodeAnimation_ir27h")
states/Hit/position = Vector2(195, -255)
states/Idle/node = SubResource("AnimationNodeAnimation_56s5d")
states/Idle/position = Vector2(341, 100)
states/Roll/node = SubResource("AnimationNodeAnimation_rkt3e")
states/Roll/position = Vector2(602, -255)
states/Walk/node = SubResource("AnimationNodeAnimation_sviv5")
states/Walk/position = Vector2(499, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_delv0"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_8tlq2"), "Idle", "Death", SubResource("AnimationNodeStateMachineTransition_qqfcm"), "Walk", "Death", SubResource("AnimationNodeStateMachineTransition_vnxbj"), "Idle", "Hit", SubResource("AnimationNodeStateMachineTransition_amv45"), "Walk", "Hit", SubResource("AnimationNodeStateMachineTransition_cpmc8"), "Hit", "Idle", SubResource("AnimationNodeStateMachineTransition_gchrc"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_70nme")]
graph_offset = Vector2(-79.6142, 134.588)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i2e6a"]
radius = 49.0
height = 122.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_gwvwa"]
properties/0/path = NodePath(".:hp")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_lr4pb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 57)
scale = Vector2(35, 35)
shape = SubResource("CapsuleShape2D_kiej1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
deterministic = true
callback_mode_discrete = 2
libraries = {
&"": SubResource("AnimationLibrary_isrkm")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_wg8bi")
anim_player = NodePath("../AnimationPlayer")

[node name="InputSync" parent="." instance=ExtResource("3_70nme")]

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.001

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://cj48gmj04kicp")
spawn_path = NodePath(".")

[node name="BulletSpawner" type="Marker2D" parent="."]
position = Vector2(-1, 60)

[node name="Pivot" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Pivot"]
scale = Vector2(0.12, 0.12)
sprite_frames = ExtResource("1_kiej1")
animation = &"Idle_2"
frame = 1

[node name="FireCD" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="Hitplayer" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 64
script = ExtResource("4_gwvwa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitplayer"]
position = Vector2(-3, 56)
shape = SubResource("CapsuleShape2D_i2e6a")

[node name="Invulnerability" type="Timer" parent="Hitplayer"]
wait_time = 1.5

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_gwvwa")
[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_i2e6a")
volume_db = -50.0

[connection signal="area_entered" from="Hitplayer" to="Hitplayer" method="_on_area_entered"]
